Bug 55321 - modprobe -r snd_hda_intel crashes the kernel
Summary: modprobe -r snd_hda_intel crashes the kernel
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jaroslav Kysela
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-16 11:16 UTC by Martin Ziegler
Modified: 2013-11-13 21:47 UTC (History)
3 users (show)

See Also:
Kernel Version: 3.9.0-rc2-00333-ge204378
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
config (74.31 KB, text/plain)
2013-03-16 11:16 UTC, Martin Ziegler
Details
Fix patch (1.22 KB, patch)
2013-03-17 09:27 UTC, Takashi Iwai
Details | Diff

Description Martin Ziegler 2013-03-16 11:16:04 UTC
Created attachment 95501 [details]
config

This can be reproduced by

   modprobe -r snd_hda_intel ; echo -e "\a"

modprobe -r snd_hda_intel has caused problems on my Thinkpad T501 since
kernel version 3.8. But I only know now how to reproduce it reliably.
Bisecting between 3.7 and 3.8 results in 

 commit 8dbd2879e33be37adf40f747a5fb80ef1a6cd150
 Merge: b770ea5 d308ba5
 Author: Arnd Bergmann <arnd@arndb.de>
 Date:   Thu Nov 15 17:41:21 2012 +0100

    Merge branch 'omap/dt' into next/drivers

as the first bad commit.

I attach screenshots and config-3.9.0-rc2-00333-ge204378
Comment 2 Takashi Iwai 2013-03-17 09:19:30 UTC
The bisection results looks bogus, unfortunately.

Could you give alsa-info.sh output (run with --no-upload option)?
Also, please check whether the problems persists on 3.9-rc, too.
Comment 3 Takashi Iwai 2013-03-17 09:26:46 UTC
OK, I found the problem in the latest code.  But this shouldn't be present in 3.8.  You meant the problem is between 3.7 and 3.9?

If it was meant so, try the patch below.
Comment 4 Takashi Iwai 2013-03-17 09:27:15 UTC
Created attachment 95641 [details]
Fix patch
Comment 5 Martin Ziegler 2013-03-17 10:00:43 UTC
The patch fixes the problem in 3.9.0-rc2-00333-ge204378.
Thanks!

I will recheck if the bug was already in 3.8, as I thought.
Comment 6 Martin Ziegler 2013-03-17 10:38:51 UTC
In 3.8.0 a series of unloading and loading of all snd-modules resulted
again in a crash. But I could not reproduce it  second time. So in 3.8 this
could be a different bug.
Comment 7 Florian Mickler 2013-03-24 10:21:15 UTC
A patch referencing this bug report has been merged in Linux v3.9-rc4:

commit 31b6945a899a30f9dffa9cba8ed2e494784810a9
Author: Takashi Iwai <tiwai@suse.de>
Date:   Sun Mar 17 10:23:40 2013 +0100

    ALSA: hda - Fix missing beep detach in patch_conexant.c

Note You need to log in before you can comment on or make changes to this bug.